# ai-bubble-sim

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  render.yaml
config/: companies.yaml  source_urls.yaml
e2e/: dashboard.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
revamp/backend/: .env.example  .gitignore  pyproject.toml  seed_hero.py
revamp/backend/app/: config.py  db.py  ingestion.py  main.py  models.py  schemas.py  verification.py
revamp/backend/app/chat/: agent.py  filing_search.py
revamp/backend/app/engine/: models.py  rules.py  scenario.py
revamp/backend/app/extraction/: adapter.py  fallback.py  schema.py
revamp/backend/app/routers/: chat.py  documents.py  edges.py  scenarios.py
revamp/backend/app/services/: candidates.py  hero_seed.py  review.py  scenarios.py
revamp/backend/tests/: conftest.py  test_candidates_service.py  test_chat_agent.py  test_db.py  test_deployment_config.py  test_documents_api.py  test_edges_api.py  test_engine_models.py  test_engine_rules.py  test_engine_scenario.py  test_extraction_adapter.py  test_extraction_fallback.py  test_extraction_schema.py  test_filing_search.py  test_health.py  test_hero_seed.py  test_ingestion.py  test_models.py  test_review_service.py  test_scenarios_api.py  test_schemas.py  test_verification.py
tests/: test_api_v2.py  test_api_v2_payload.py  test_companies.py  test_engine_modes.py  test_graph_export.py  test_hero_seed.py  test_relationship_extraction.py  test_repository.py  test_settings.py  (+4 more)
(+115 files in other folders)
