[project]
name = "ai-fragility-map"
version = "0.1.0"
description = "Data-first AI supply-chain fragility simulator and ripple-map dashboard."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "duckdb>=1.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "pdfplumber>=0.11.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "requests>=2.32.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
fragility-map = "fragility_map.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fragility_map"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
