[project]
name = "fragilitygraph-backend"
version = "0.1.0"
description = "FragilityGraph backend — evidence-backed AI-bubble simulator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pymupdf>=1.24",
    "rapidfuzz>=3.10",
    "openai>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
